--- a/NewsPaper/templates/news.html
+++ b/NewsPaper/templates/news.html
@@ -2,29 +2,23 @@
 
 {% load my_filters %}
 
-<!--Открываем блок заголовка -->
-<!--Пишем название заголовка-->
-<!--Закрываем блок заголовка -->
+
 {% block title %}
 News
 {% endblock title %}
 
-<!--Открываем блок содержания -->
-<!--В этом блоке мы выводим все посты в виде таблицы-->
+
 {% block content %}
   <h1>Все публикации</h1>
   <hr>
-  <!--Открываем блок условия-->
-  <!--Если есть публикации, то выводим их в виде таблицы-->
+
   {% if posts %}
-      <!--Открываем тег таблицы-->
+
       <table>
-          <!--Открываем тег строки, чтобы описать названия столбцов -->
+
           <tr>
-              <!--Открываем тег столбца -->
               <td>
-                  <b> Редактировать/Удалить &nbsp <!--тег пробела--> </b>
-              <!--Закрываем тег столбца-->
+                  <b> Редактировать/Удалить &nbsp  </b>
               </td>
               <td>
                   <b> &nbsp Заголовок &nbsp </b>
@@ -41,15 +35,10 @@ News
               <td>
                   <b> &nbsp Краткое содержание &nbsp </b>
               </td>
-          <!--Закрываем тег строки-->
           </tr>
-      <!--Открываем тег цикла-->
-      <!--В цикле выводим все посты-->
-      {% for post in posts %}  <!-- Для каждого поста генерируется новая строчка, т.е. новый html-код.
-      При этом сам цикл работает также, как и в Python. post — переменная цикла, т. е. наш объект, взятый из общего списка -->
+      {% for post in posts %}
           <tr>
               <td>
-                  <!-- При нажатии на имя поста в таблице нас теперь будет перекидывать на страницу с информацией о посте -->
                   <a href="{% url 'post_detail' post.id %}">{{ post.title|censor }}</a>
               </td>
               <td>
@@ -61,33 +50,23 @@ News
 
               </td>
               <td>
-                  <!--Выводим время создания поста, с фильтром-->
                   {{ post.created_at|date:'d M Y'}}
               </td>
               <td>
-                  <!--Выводим автора поста-->
                   {{ post.author }}
               </td>
               <td>
-                  <!--Выводим содержание поста с использованием фильтра "цензор"-->
-                  <!--фильтр написан в файле custom_filters.py в папке templatetags-->
                   {{ post.text|truncatechars:50|censor }}
               </td>
           </tr>
-      <!--закрываем цикл-->
       {% endfor %}
-      <!--закрываем таблицу-->
       </table>
 
-      <!--Прописываем постраничный вывод постов-->
-      <!-- Проверяем что поддерживается постраничный вывод -->
       {% if is_paginated %}
-          <!-- Если доступна предыдущая страница, то даём ссылку на неё и самую первую страницу -->
           {% if page_obj.has_previous %}
               <a href="?page=1">First</a>
               <a href="?page={{ page_obj.previous_page_number }}"><<<</a>
           {% endif %}
-          <!-- Показываем только текущую страницу и ближайшие к ней, чтобы список не тянулся и не захламлял страницу -->
           {% for num in page_obj.paginator.page_range %}
               {% if page_obj.number == num %}
                   <a>{{ num }}</a>
@@ -95,13 +74,11 @@ News
                   <a href="?page={{ num }}">{{ num }}</a>
               {% endif %}
           {% endfor %}
-          <!-- Если есть следующая страница, то даём ссылку на неё и на самую последнюю страницу -->
           {% if page_obj.has_next %}
               <a href="?page={{ page_obj.next_page_number }}">>>></a>
               <a href="?page={{ page_obj.paginator.num_pages }}">Last</a>
           {% endif %}
       {% endif %}
-  <!--Иначе, выводим сообщение:-->
   {% else %}
       <h2>Публикаций нет!</h2>
   {% endif %}
